src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Mobile_Availability__c</fullName>
        <label>Mobile Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Competitor_Name__c</fullName>
        <label>Mobile Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telekom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>O2</fullName>
                </value>
                <value>
                    <fullName>E-Plus</fullName>
                </value>
                <value>
                    <fullName>Mobilcom Debitel</fullName>
                </value>
                <value>
                    <fullName>1&amp;1</fullName>
                </value>
                <value>
                    <fullName>Andere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPEX__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Opex</description>
        <label>OPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Detail__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Id , &apos;Details&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>OP{000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A unique searchable reference ID in Salesforce.</inlineHelpText>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Salesforce_ID__c</fullName>
        <label>Order Salesforce ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_LT_Calculation__c</fullName>
        <description>LT Calculation field from Partner Account attached with opportunity</description>
        <formula>UM_PartnerAccount__r.UM_P_LT_Calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Partner&apos;s LT Calculation</inlineHelpText>
        <label>Partner - LT Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_OT_Calculation__c</fullName>
        <description>OT Calculation field from Partner Account attached with opportunity</description>
        <formula>UM_PartnerAccount__r.UM_P_OT_Calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Partner&apos;s OT Calculation</inlineHelpText>
        <label>Partner - OT Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payplan_Approval_Status__c</fullName>
        <inlineHelpText>Not Submitted: Salesperson has not requested for Opportunity to pass through PayPlan
Booked: Payplan have agreed the opportunity conforms to standard
Rejected: Payplan have suggested the opportunity does not conform to standards</inlineHelpText>
        <label>Payplan: Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payplan_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The salesperson ticks this box to claim the CLV commission by making a positive declaration that the claim is within the terms of the commission scheme.</description>
        <inlineHelpText>I declare that this claim is within the terms of the commission scheme.
At this stage you should have:-
&gt; Completed the Credit Check
&gt; Have a signed contract 
&gt; Ensure the values in system match the contract
&gt; Ensure AIM is complete (if applicable)</inlineHelpText>
        <label>Within terms of the commission scheme?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Phone_Availability__c, &apos;Available&apos;),
	IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;),
	If( ISPICKVAL(Phone_Availability__c, &apos;Unavailable&apos;),
           IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;),
           IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Phone Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Availability__c</fullName>
        <label>Phone Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Detail_Status__c</fullName>
        <label>Planning Detail Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability(%)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <default>true</default>
                    <label>10</label>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Basket_Detail__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Product_Basket__c, &apos;Details&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Basket Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Basket__c</fullName>
        <description>Synced product Basket Id</description>
        <label>Product Basket</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office Internet</fullName>
                </value>
                <value>
                    <fullName>Office Internet &amp; Phone</fullName>
                </value>
                <value>
                    <fullName>Company Internet</fullName>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
                <value>
                    <fullName>LE Fiber</fullName>
                </value>
                <value>
                    <fullName>Wholesale Data</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                </value>
                <value>
                    <fullName>WiFi/Wlan</fullName>
                </value>
                <value>
                    <fullName>Company Voice</fullName>
                </value>
                <value>
                    <fullName>Mobilfunk</fullName>
                </value>
                <value>
                    <fullName>Digital TV</fullName>
                </value>
                <value>
                    <fullName>Allgemeine Beratung</fullName>
                </value>
                <value>
                    <fullName>Office Internet 50</fullName>
                    <isActive>false</isActive>
                    <label>Office Internet 50</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked once reminder Mail is sent to customer</description>
        <label>Quote Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Contract_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF_Sales_Partner_ID_BW__c</fullName>
        <formula>UM_PartnerAccount__r.UM_P_Sales_ID_BW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales ID BW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Sales_Partner_ID_NRW_HSN__c</fullName>
        <formula>UM_PartnerAccount__r.UM_P_Sales_ID_NRW_HSN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales ID NRW/HSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <inlineHelpText>It refers to Lead Source. It will be auto-populated based on the Lead Source.</inlineHelpText>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engage Portal</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Account Managed</fullName>
                </value>
                <value>
                    <fullName>Bid Managed</fullName>
                </value>
                <value>
                    <fullName>Framework Agreement</fullName>
                </value>
                <value>
                    <fullName>3rd Party Reseller</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Indirect Partner</fullName>
                </value>
                <value>
                    <fullName>D2D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_P_Partner_ID_BW__c</fullName>
        <formula>Owner.Contact.Account.UM_P_Sales_ID_BW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner ID BW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_P_Partner_ID_NRW_HSN__c</fullName>
        <formula>Owner.Contact.Account.UM_P_Sales_ID_NRW_HSN__c</formula>
        <label>Sales Partner ID NRW/HSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_ID_BW__c</fullName>
        <label>Sales Partner ID BW</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_ID_NRW_HSN__c</fullName>
        <label>Sales Partner ID NRW/HSN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Detail__c</fullName>
        <inlineHelpText>Opp Type New / Type Detail MAC - To be selected when additional sites are being added to an existing contract, e.g. 3 additional sites on an existing IPVPN. Also when changing an existing service if there is a one-off charge but rental remains the same.</inlineHelpText>
        <label>Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Resign</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>End of contract Resign with Changes</fullName>
                </value>
                <value>
                    <fullName>Early Resign with Changes</fullName>
                </value>
                <value>
                    <fullName>Upgrade during life of contract only</fullName>
                </value>
                <value>
                    <fullName>Move or Change during life of contract only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Approval__c</fullName>
        <label>Approval status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_Approval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_AttachOrderConfirmationDoc__c</fullName>
        <description>Attach the order confirmation document in pdf format in attachments section</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; + $Label.UM_OrderConfirmationTemplateId + 
&quot;&amp;qmode=Attachments&quot; + 
&quot;&amp;DefaultPDF=1&quot;</formula>
        <label>UM_AttachOrderConfirmationDoc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CreateQuote__c</fullName>
        <formula>HYPERLINK(&quot;https://workflow.congamerge.com/?SessionId=&quot;
+$Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + um_createquoteurl__c , &quot;Create Quote&quot;)</formula>
        <label>Create Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_IncrementTCV__c</fullName>
        <formula>UM_TotalContractValue__c - Remaining_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Increment TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Leaflets__c</fullName>
        <label>Leaflets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leaflets Requested</fullName>
                </value>
                <value>
                    <fullName>Leaflets Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Logo_Small__c</fullName>
        <defaultValue>&quot;https://c.cs89.content.force.com/servlet/servlet.ImageServer?id=0150E000000DvWz&amp;oid=00D0E0000008lsj&amp;lastMod=1505993313000&quot;</defaultValue>
        <label>UM_Logo_Small</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Logo__c</fullName>
        <defaultValue>&quot;https://c.cs89.content.force.com/servlet/servlet.ImageServer?id=0150E000000DvX9&amp;oid=00D0E0000008lsj&amp;lastMod=1509631062000&quot;</defaultValue>
        <label>UM_Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Max_State_Code__c</fullName>
        <label>Max State Code</label>
        <summarizedField>LG_OpportunityReport__c.UM_State_Code__c</summarizedField>
        <summaryForeignKey>LG_OpportunityReport__c.LG_Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UM_MedalliaNPSResponse__c</fullName>
        <description>Response from Medallia Buy survey.</description>
        <label>Medallia Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Min_State_Code__c</fullName>
        <label>Min State Code</label>
        <summarizedField>LG_OpportunityReport__c.UM_State_Code__c</summarizedField>
        <summaryForeignKey>LG_OpportunityReport__c.LG_Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UM_OpportunityApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_PICReasons__c</fullName>
        <label>PIC reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doppelter Auftrag</fullName>
                </value>
                <value>
                    <fullName>Eigentümer verweigert Inst</fullName>
                </value>
                <value>
                    <fullName>Falschberatung - hat ISDN</fullName>
                </value>
                <value>
                    <fullName>Falschberatung - Kostenpfl</fullName>
                </value>
                <value>
                    <fullName>Falschberatung - zu hoher</fullName>
                </value>
                <value>
                    <fullName>Falscher Auftrag</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Kein Auftrag erteilt / Nie</fullName>
                </value>
                <value>
                    <fullName>Korrektur KD- Folgeauftrag</fullName>
                </value>
                <value>
                    <fullName>Korrektur Kundenkonto</fullName>
                </value>
                <value>
                    <fullName>Korrektur UM -Folgeauftrag</fullName>
                </value>
                <value>
                    <fullName>Kulanz</fullName>
                </value>
                <value>
                    <fullName>Kunde mit Umbaumaßnahmen n</fullName>
                </value>
                <value>
                    <fullName>Kunde nicht erreicht / Kei</fullName>
                </value>
                <value>
                    <fullName>Kündigung fristlos</fullName>
                </value>
                <value>
                    <fullName>Marode HVA</fullName>
                </value>
                <value>
                    <fullName>Mitversorgung, hoher Aufwand UM</fullName>
                </value>
                <value>
                    <fullName>MVLZ</fullName>
                </value>
                <value>
                    <fullName>Produkt nicht verfügbar</fullName>
                </value>
                <value>
                    <fullName>Produkt zu teuer</fullName>
                </value>
                <value>
                    <fullName>Rücknahme Kündigung</fullName>
                </value>
                <value>
                    <fullName>SAT Anlage, anderer NE 3/4</fullName>
                </value>
                <value>
                    <fullName>schriftlich - ohne Grund</fullName>
                </value>
                <value>
                    <fullName>Storno nach Widerruffrist</fullName>
                </value>
                <value>
                    <fullName>Storno Spezialauftrag</fullName>
                </value>
                <value>
                    <fullName>Todesfall / Änderung Famil</fullName>
                </value>
                <value>
                    <fullName>Umbau zu teuer - UM</fullName>
                </value>
                <value>
                    <fullName>Unzufrieden mit Service</fullName>
                </value>
                <value>
                    <fullName>Widerruf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Product_Categories__c</fullName>
        <label>Product Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Complex Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_QuoteTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_QuotingDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Quoting Date</label>
        <type>Date</type>
    </fields>
     <fields>
        <fullName>UM_SendOrderConfirmationEmail__c</fullName>
        <description>Send order confirmation email to the opportunity&apos;s primary contact</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;EmailToID=&quot;+ LG_PrimaryContact__r.Id+ 
&quot;&amp;EmailFromID=&quot; +  $Label.UM_OrgWideAddressId + 
&quot;&amp;congaemailtemplateid=&quot; + $Label.UM_OrderConfirmationEmailTemplateId + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UM_SendOrderConfirmationEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Sender_Address_Ref__c</fullName>
        <label>Sender Address Ref</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_Sender_Address__c</fullName>
        <formula>IF(AND(UM_Max_State_Code__c=3,UM_Min_State_Code__c&lt;=3), $Label.UM_Unitymedia_NRW_GmbH_Updated_Address, 
IF(AND(UM_Max_State_Code__c=2,UM_Min_State_Code__c=2), $Label.UM_Unitymedia_Hessen_GmbH_Co_KG_Updated_Address, 
IF(AND(UM_Max_State_Code__c=1,UM_Min_State_Code__c=1), $Label.UM_Unitymedia_BW_GmbH_Updated_Address, 
IF(AND(UM_Max_State_Code__c=null,UM_Min_State_Code__c=null), $Label.UM_Unitymedia_NRW_GmbH_Updated_Address,
IF(AND(UM_Max_State_Code__c=2,UM_Min_State_Code__c=1), $Label.UM_Unitymedia_NRW_GmbH_Updated_Address,$Label.UM_Unitymedia_NRW_GmbH_Updated_Address)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_TotalContractValue__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_TotalInvestment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_TotalNonRecurringAmount__c</fullName>
        <label>Total Non-Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_TotalRecurringAmount__c</fullName>
        <label>Total Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UP_Status__c</fullName>
        <label>ÜP-Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_To_lead_Interest__c</fullName>
        <label>Web To lead Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Internet</fullName>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Projectload__c</fullName>
        <formula>UM_TotalContractValue__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Projectload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Migrate</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Generation_Batch_Job_Id__c</fullName>
        <label>Order Generation Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Process_Order_Generation_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the opportunity is set to be processed in batch mode</description>
        <inlineHelpText>Force batch processing of the opportunity</inlineHelpText>
        <label>Process Order Generation In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_Batch_Job_Id__c</fullName>
        <description>Id of the batch that&apos;s generating a new product bundle/basket and basically cloning product configurations</description>
        <label>Product Configuration Clone Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product configuration cloning is set to be processed in batch mode</description>
        <inlineHelpText>Force generation of MACD opportunity in a batch</inlineHelpText>
        <label>Product Configuration Clone In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Added_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Added To</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Opportunities (Subscription To Be Added To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Changed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Changed</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>um_createquoteurl__c</fullName>
        <formula>&quot;&amp;id=&quot;&amp;Id&amp; 
&quot;&amp;QueryId=[Query02]&quot;&amp;$Setup.LG_EnvironmentVariables__c.LG_CongaQueryID5__c&amp; 
&quot;&amp;QueryId=[Query03]&quot;&amp;$Setup.LG_EnvironmentVariables__c.LG_CongaQueryID6__c&amp; 
&quot;&amp;QueryId=[ConRole]&quot;&amp;$Setup.LG_EnvironmentVariables__c.LG_CongaQueryID7__c&amp; 
&quot;&amp;QueryId=[BillSer]&quot;&amp;$Setup.LG_EnvironmentVariables__c.LG_CongaQueryID8__c&amp; 
&quot;&amp;QueryId=[Owner]&quot;&amp;$Setup.LG_EnvironmentVariables__c.LG_CongaQueryID9__c&amp; 
&quot;&amp;TemplateId=&quot;&amp;$Setup.LG_EnvironmentVariables__c.LG_CongaTemplateID__c&amp; 
&quot;&amp;SelectTemplates=0&quot;&amp; 
&quot;&amp;DefaultPDF=1&quot;&amp; 
&quot;&amp;OFN=Unitymedia_Angebot_&quot;&amp;Account.LG_AccountNumber__c&amp;&quot;_&quot;&amp; TEXT(TODAY())&amp; 
&quot;&amp;FP0=1&quot;&amp; 
&quot;&amp;DS2=1&quot;&amp; 
&quot;&amp;DS3=1&quot;&amp; 
&quot;&amp;DS7=1&quot;&amp; 
&quot;&amp;SC0=1&quot;&amp; 
&quot;&amp;SC1=Attachments&quot;</formula>
        <label>UM Create Quote URL</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>csordtelcoa__Change_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
</CustomObject>